--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autenthication-service-AndreClaveria",
+  "name": "autenthication-service-andreclaveria",
   "version": "1.0.0",
   "description": "",
   "main": "dist/server.js",
@@ -20,11 +20,20 @@
     "mongoose": "^7.0.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.21.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "nodemon": "^3.1.9",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "pino-roll": "^3.0.0",
+    "prettier": "^3.5.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "typescript-eslint": "^8.25.0"
   }
 }
